test mermaid in mac

--- a/AdOptimization/广告投放学习笔记.md
+++ b/AdOptimization/广告投放学习笔记.md
@@ -1,4 +1,4 @@
-# 广告投放学习笔记
+# AdOptimization Learning Notes I
 
 [TOC]
 
@@ -44,6 +44,23 @@ $$
 
 ## 市场调研
 
-在市场调研部分，主要使用了
+在市场调研部分，主要使用了[Appmagic](https://appmagic.rocks/), [Insightrackr](https://www.insightrackr.com/en/?referer=google_ads&from_type=marketing&source=google&campaign_id=22257792677&adgroup_id=175250869396&ad_id=733629641440&keyword=insightrackr&gad_source=1&gad_campaignid=22257792677&gclid=CjwKCAjwyb3DBhBlEiwAqZLe5BA_GWSQJ5tfyrQ7w8ePu2f6PXj4owx00cJ5rOqxsw2uSIQt9oeblRoCNd4QAvD_BwE), [Google Play](https://play.google.com/store/games)平台，对于其具体操作在本文中不做赘述。
+
+> Appmagic: Tap into the deepest market insights with our unparalleled classification  system, exclusive advertising analysis, and trendspotting features.  Do`t just track your competitors—get ahead of them. One might say it is magic!
+>
+> Insightrackr: Insightrackr is a mobile marketing strategy analysis platform that  delivers real-time insights to fuel faster, smarter user growth.
+>
+> Google Play: *Google Play* gives you one place to find, enjoy, &  share Apps, Music, Movies & Books - instantly anywhere across the  web & android devices.
 
 ## 过数据
+
+根据「过数文档」，依次查看每个产品的每个campaign
+
+```mermaid
+graph LR
+A[Hard edge] -->B(Round edge)
+    B --> C{Decision}
+    C -->|One| D[Result one]
+    C -->|Two| E[Result two]
+```
+
