--- a/AdOptimization/广告投放学习笔记.md
+++ b/AdOptimization/广告投放学习笔记.md
@@ -58,10 +58,16 @@ $$
 根据「过数文档」，依次查看每个产品的每个campaign
 
 ```mermaid
-graph LR
-A[Hard edge] -->B(Round edge)
-    B --> C{Decision}
-    C -->|One| D[Result one]
-    C -->|Two| E[Result two]
+graph TD
+start[Start] --> product["选择一个产品"]
+product --> ROI("查看ROI拟合数据")
+ROI --> CAR("查看收支数据")
+CAR --> |宏观判断| campagin("选择一个计划")
+campagin --> analyse("分析 spend ROI 留存 CPI 激活率 等数据")
+analyse --> |需要调整| change("对预算，Goal, 素材等做出调整")
+analyse --> |无需调整，下一计划| campagin
+change --> |无需调整，下一计划| campagin
+campagin --> |完成计划调整，下一产品| product
+product --> |完成全部产品调整| ed[End]
 ```
 
