--- a/Aesthetics/谈美.md
+++ b/Aesthetics/谈美.md
@@ -1,2 +1,12 @@
 # 谈美
 
+## 我们对于一棵古松的三种态度——实用的、科学的、美感的
+
+## “当局者迷，旁观者清”——艺术和实际人生的距离
+
+## “子非鱼，安知鱼之乐”——宇宙的人情化
+
+## 希腊女神的雕像和血色鲜丽的英国姑娘——美感与快感
+
+## “记得绿罗裙，处处怜芳草”——美感与联想
+
