--- a/Aesthetics/谈美.md
+++ b/Aesthetics/谈美.md
@@ -2,6 +2,14 @@
 
 ## 我们对于一棵古松的三种态度——实用的、科学的、美感的
 
+> 背景：园里有一棵古松
+> 
+> 人物：木商、植物学家、画家
+>
+> 
+
+
+
 ## “当局者迷，旁观者清”——艺术和实际人生的距离
 
 ## “子非鱼，安知鱼之乐”——宇宙的人情化
